--- a/_posts/2018-08-27-parama.md
+++ b/_posts/2018-08-27-parama.md
@@ -13,6 +13,10 @@ Adresas	Respublikos g. 47, Panevėžys
 A/s: LT497300010124254234  
 Bankas: AB Swedbank  
 
+## Paypal
+Paypal: jbg.alumni@gmail.com
+[![Paypal parama]({{site.baseurl}}/img/paypal-donate-button.png)](https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=jbg.alumni@gmail.com&item_name=JBG+Alumni¤cy_code=EUR&bn=PP%2dDonationsBF)
+
 ## Patreon
 [![Patreon parama]({{site.baseurl}}/img/patreon.png)](https://www.patreon.com/jbgalumni)
 
