Mintor changes for parama descriptions

--- a/_posts/2018-08-27-parama.md
+++ b/_posts/2018-08-27-parama.md
@@ -3,7 +3,7 @@ layout: post
 published: true
 title: Parama
 ---
-Panevėžio Juozo Balčikonio Alumni kasmet organizuoja renginius, kuriems reikia lėšų. Prisidėti labai paprasta pervedant pinigus į JBG Alumni sąskaitą, Paypal ar prisidedant kiekvieną mėnesį per Patreon. 
+Panevėžio Juozo Balčikonio Alumni kasmet organizuoja renginius, kuriems reikia lėšų. Prisidėti labai paprasta pervedant pinigus į JBG Alumni sąskaitą, per Paypal ar prisidedant kiekvieną mėnesį per Patreon platformą. 
 
 ## Banko sąskaita
 PANEVĖŽIO JUOZO BALČIKONIO GIMNAZIJOS ALUMNŲ asociacija  
@@ -13,10 +13,11 @@ Adresas	Respublikos g. 47, Panevėžys
 A/s: LT497300010124254234  
 Bankas: AB Swedbank  
 
-## Paypal
-Paypal: jbg.alumni@gmail.com
-[![Paypal parama]({{site.baseurl}}/img/paypal-donate-button.png)](https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=jbg.alumni@gmail.com&item_name=JBG+Alumni¤cy_code=EUR&bn=PP%2dDonationsBF)
+## PayPal parama
+PayPal: jbg.alumni@gmail.com
+[![PayPal parama]({{site.baseurl}}/img/paypal-donate-button.png)](https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=jbg.alumni@gmail.com&item_name=JBG+Alumni¤cy_code=EUR&bn=PP%2dDonationsBF)
 
-## Patreon
+## Patreon parama
+Tapkite JBG Alumni globėju per [Patreon](https://www.patreon.com/jbgalumni) platformą.
 [![Patreon parama]({{site.baseurl}}/img/patreon.png)](https://www.patreon.com/jbgalumni)
 
